# rag_admissions_consulting

./: .gitignore  HUMAN_HANDOFF.md  PIPELINE_FLOW.md  README.md  debug_url.py  test_conversation.py
rag_admissions_consulting/: .gitignore  =2.9.9  Makefile  README.md  config.py  debug_creativity_level.py  dev.bat  dev.py  dev.sh  pyproject.toml  requirements.txt  setup.py  test_config_integration.py
rag_admissions_consulting/docs/: mkdocs.yml
rag_admissions_consulting/docs/docs/: index.md
rag_admissions_consulting/notebooks/: load_file.ipynb
rag_admissions_consulting/rag_admissions_consulting.egg-info/: PKG-INFO  SOURCES.txt
rag_admissions_consulting/src/: README.md  __init__.py  app_chat.py  data_processing.py  embeddings.py  helper.py  llms.py  main.py  ood_agent.py  ood_config.py  prompt.py  promt.py  rag_agent.py  scraper.py  seed.py  semantic_search.py  store.py
rag_admissions_consulting/src/api/: routes.py
rag_admissions_consulting/src/config/: README.md  backend_config.py  settings.py  test_config.py
rag_admissions_consulting/src/core/: app_manager.py  context_cache.py  context_manager.py  prompt_engine.py  query_analyzer.py  rag_engine.py  session_manager.py
rag_admissions_consulting/src/data_pipeline/: README.md  __init__.py
rag_admissions_consulting/src/infrastructure/: README.md  __init__.py  embeddings.py  llms.py  store.py
rag_admissions_consulting/src/legacy/: __init__.py  config.py  rag_agent.py
rag_admissions_consulting/src/scripts/: README.md  __init__.py  debug_pinecone.py  run_data_pipeline.py  scrape_example.py  seed.py
(+436 files in other folders)
