[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag_admissions_consulting"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "caonam0304" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["rag_admissions_consulting"]
include = ["pyproject.toml", "rag_admissions_consulting/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rag_admissions_consulting"]
force-sort-within-sections = true

